tests/fixtures/LatestTests/ConstVariableDeclarationTests/errors/int32_to_int8.fg
/; EXPECT_ERROR: InitializerExpressionTypeMismatch
const x:int8 = 1000

